--- a/FinanceHome/index.html
+++ b/FinanceHome/index.html
@@ -3,16 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Finance Home</title>
+  <title>Dashboard Financeiro</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background-color: #f2f2f2;
+    * {
+      box-sizing: border-box;
     }
+
+    body {
+  font-family: 'Inter', sans-serif;
+  margin: 0;
+  background-color: #f2f2f2;
+      }
 
     .topbar {
       background-color: #3399ff;
@@ -47,7 +52,7 @@
     }
 
     .dashboard {
-      max-width: 500px;
+      max-width: 600px;
       background-color: white;
       margin: 30px auto;
       padding: 20px;
@@ -60,6 +65,7 @@
       padding: 10px;
       border-radius: 10px;
       color: #3399ff;
+      font-size: 20px;
     }
 
     h2 {
@@ -72,11 +78,14 @@
     .resumo {
       display: flex;
       justify-content: space-between;
+      gap: 10px;
+      flex-wrap: wrap;
     }
 
     .resumo a {
       text-decoration: none;
-      width: 30%;
+      flex: 1;
+      min-width: 120px;
     }
 
     .box {
@@ -99,6 +108,7 @@
       align-items: center;
       justify-content: center;
       gap: 5px;
+      flex-wrap: wrap;
     }
 
     .box p {
@@ -115,11 +125,12 @@
       background-color: #001f33;
       color: white;
       padding: 10px;
-      width: 100px;
+      width: 100%;
       border: none;
       border-radius: 10px;
       display: block;
       cursor: pointer;
+      font-size: 16px;
     }
 
     .transacoes-header {
@@ -128,10 +139,8 @@
       align-items: center;
       margin-top: 30px;
       margin-bottom: 10px;
-    }
-
-    .transacoes-header h2 {
-      margin: 0;
+      flex-wrap: wrap;
+      gap: 10px;
     }
 
     .transacoes-header button {
@@ -153,6 +162,8 @@
       justify-content: space-between;
       align-items: center;
       color: white;
+      font-size: 14px;
+      flex-wrap: wrap;
     }
 
     .transacao i {
@@ -165,6 +176,41 @@
       padding: 3px 10px;
       border-radius: 15px;
       font-weight: bold;
+    }
+
+    /* RESPONSIVO */
+    @media (max-width: 500px) {
+      h1 {
+        font-size: 18px;
+      }
+
+      h2 {
+        font-size: 16px;
+      }
+
+      .box h3 {
+        font-size: 13px;
+      }
+
+      .box p {
+        font-size: 14px;
+      }
+
+      .botao {
+        font-size: 14px;
+        padding: 8px;
+      }
+
+      .transacao {
+        font-size: 13px;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 5px;
+      }
+
+      .transacao span {
+        align-self: flex-end;
+      }
     }
   </style>
 </head>
@@ -225,3 +271,4 @@
   </div>
 </body>
 </html>
+
